fix Create Channel Overlapping

--- a/client/css/styles.scss
+++ b/client/css/styles.scss
@@ -58,6 +58,10 @@ aside {
       color: white;
     }
 
+    .accounts-dialog {
+      width: 19.5vw;
+    }
+    
     h2 {
       border-top: #bac solid 1px;
       padding-top: 20px;
